Added heart favicon

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>How Much Does Akash Love You?</title>
         <script src = "./script.js"></script>
         <link rel = "stylesheet" href = "style.css">
+        <link rel = "icon" href = pictures/favicon.png">
     </head>
     <body>
         <h2 id = "sentence"></h2>
