--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>How Much Does Akash Love You?</title>
+        <title>Does Akash Love You?</title>
         <script src = "./script.js"></script>
         <link rel = "stylesheet" href = "style.css">
     </head>
