Add letter page

--- a/index.html
+++ b/index.html
@@ -11,5 +11,8 @@
         <img id = "img" alt = "Akash picture">
         <br>
         <h1>And he loves you.</h1>
+        <br>
+        <h3>Want to contact Akash yourself to find out how much he loves you? <a href = "mailto:akash.w.shah@gmail.com">Send him a message.</a></h3>
+        <span id = "letter-prompt"><a href = "letter.html">View first anniversary letter</a></span>
     </body>
 </html>
