Delete seperate postion for name and love

--- a/letter.html
+++ b/letter.html
@@ -10,11 +10,8 @@
         <h3>Dear Jasmine,</h3>
         <br>
         <p>Here will go the text once I've written it.</p>
-        <div class = "signature">
-            <h3>Love</h3>
-            <br>
-            <h3 id = "name">Akash Shah</h3>
-        </div>
+        <br>
+        <h3 id = "signature">Love, Akash Shah</h3>
         <span id = "main-prompt"><a href = "index.html">Go back to the main page</a></span>
     </body>
 </html>
