--- a/letter.html
+++ b/letter.html
@@ -12,6 +12,9 @@
         <p>Here will go the text once I've written it.</p>
         <br>
         <h3 id = "signature">Love, Akash Shah</h3>
-        <span id = "main-prompt"><a href = "index.html">Go back to the main page</a></span>
+        <div class = "prompt">
+            <p><a href = "index.html">Go back to main page</a></p>
+            <p><a href = "reasons.html">Reasons Akash Loves You</a></p>
+        </div>
     </body>
 </html>
