Put onload in body

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <script src = "./script.js"></script>
         <link rel = "stylesheet" href = "style.css">
     </head>
-    <body>
+    <body onload = "formatPage();">
         <h2 id = "sentence"></h2>
         <br>
         <img id = "img" alt = "Akash picture">
