Move prompt style to prompt.css

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Does Akash Love You?</title>
         <script src = "./script.js"></script>
         <link rel = "stylesheet" href = "style.css">
+        <link rel = "stylesheet" href = "prompt.css">
     </head>
     <body onload = "formatPage();">
         <h2 id = "sentence"></h2>
