--- a/letter.html
+++ b/letter.html
@@ -3,6 +3,7 @@
     <head>
         <title>First Anniversary Letter</title>
         <link rel = "stylesheet" href = "letter.css">
+        <link rel = "stylesheet" href = "prompt.css">
     </head>
     <body>
         <h1>First Anniversary Letter</h1>
