--- a/reasons.html
+++ b/reasons.html
@@ -3,6 +3,7 @@
     <head>
         <title>Reasons You're Amazing</title>
         <link rel = "stylesheet" href = "reasons.css">
+        <link rel = "stylesheet" href = "prompt.css">
     </head>
     <body>
         <div class = "heading">
