--- a/letter.html
+++ b/letter.html
@@ -7,11 +7,43 @@
     </head>
     <body>
         <h1>First Anniversary Letter</h1>
-        <br>
         <h3>Dear Jasmine,</h3>
-        <br>
-        <p>Here will go the text once I've written it.</p>
-        <br>
+        <p>
+            The love of my life, my honey, my queen, my hunny bunny, my sexy goddess, the coolest cat, the best. At this point, we have been dating for a full twelve months, 
+            or three-hundred sixty-five days, or one year. Thank you so much for being with me and by side for the whole time. And thanks to you, it's been the best time of my entire life. 
+            And in this time, I've seen firsthand and learned that you are the best. The best girlfriend, the best person, in the world, in the universe even. 
+            Every day, you make me feel happy. You're always there for me, and you give me so much love, no matter what. When I'm stressed, over anything, 
+            especially tests, you always calm me down. Your voice calms me down and your hugs make everything else go away.
+        </p>
+        <p>
+            I believe that you are the perfect girlfriend, at least for me. I've probably told you this before, but (and I'm not kidding or pretending in any way, I seriously believe this) 
+            I honestly do not understand how it's possible to dislike you for who you are. You're kind, sweet, and weird in an amazing and wonderful and hilarious way. 
+            I've also told you this before too; I've never cried from happiness before, but the only time that I've come even close is when I was thinking about you. 
+            I was walking Lyra down the street while I was thinking about you; I thought about everything that you've done for me, how much you've improved my life, 
+            how much you've protected me, and it was all too much. You made me so happy at that moment, and you weren't even there. You're caring and you're loving, 
+            you're sweet and you're funny, you're cool and you're and you're smart, and not to mention that you're beautiful and you're cute and you're hot and you're so, so sexy. 
+            <a href = "reasons.html">You're without a doubt, the best.</a>
+        </p>
+        <p>
+            Even though we haven't been able to see each other very much over the past few months, I've still felt like you're here for me and you still make me happy. 
+            I always look forwards to receiving your texts, and when I see them it's as if I can feel the love sent from them. It always lit me up inside to see your beautiful smile on a video call, 
+            and when I get a text from you after camp, I rejoice because my honey's back. When you call me looking to hear my voice, it makes me feel so wanted and happy that even though 
+            you could have anyone that you want, it's me who you do. 
+        </p>
+        <p>
+            And honey, you do really have me. Completely and totally, I am yours. Everything about you attracts me, and there's nothing, and I mean nothing bad that I can find about you. 
+            You're my queen, my ruler, and my hunny bunny, and an excellent one for sure. I know I say this a lot, but I hope that it hasn't lost its meaning: you're the best, 
+            and you deserve the best. Anything you want me to do for you, anything that would make you happier than you currently are, even if it means me not having you, I'll do. 
+            You're the love of my life, and I only ever want you to be happy.
+        </p>
+        <p>
+            And after all of this time that we've been together, I want to thank you. For helping me, for making me happy, for loving me, and for <a href = "reasons.html">being the best</a> 
+            So honey, thank you. I don't know if I can ever thank you enough for what you've done for me. Or put into words how much I love you. I hope that you like my gifts. 
+            I'm sorry that my face looks really bad in the picture. If you ask me, you can see what it looked like before the face was put in (I think it looks better that way, 
+            you can just fill in the face with your imagination). I really hope that you like the website and that you'll visit it throughout the year (you might see some different things!). 
+            Sometimes, I look at myself, and then I look at you and I wonder how someone like me could ever be chosen, let alone deserve someone so wonderful and amazing and godlike as you. 
+            So thank you, and, you're the best you're the bestyou'rethebest you'rethebestyou'rethebestyou'rethebest
+        </p>
         <h3 id = "signature">Love, Akash Shah</h3>
         <div class = "prompt">
             <p><a href = "index.html">Go back to main page</a></p>
