Add forgotten word Spelling/grammar error

--- a/letter.html
+++ b/letter.html
@@ -10,7 +10,7 @@
         <h3>Dear Jasmine,</h3>
         <p>
             The love of my life, my honey, my queen, my hunny bunny, my sexy goddess, the coolest cat, the best. At this point, we have been dating for a full twelve months, 
-            or three-hundred sixty-five days, or one year. Thank you so much for being with me and by side for the whole time. And thanks to you, it's been the best time of my entire life. 
+            or three-hundred sixty-five days, or one year. Thank you so much for being with me and by my side for the whole time. And thanks to you, it's been the best time of my entire life. 
             And in this time, I've seen firsthand and learned that you are the best. The best girlfriend, the best person, in the world, in the universe even. 
             Every day, you make me feel happy. You're always there for me, and you give me so much love, no matter what. When I'm stressed, over anything, 
             especially tests, you always calm me down. Your voice calms me down and your hugs make everything else go away.
