Typos, added sentence, links, and drawing

--- a/letter.html
+++ b/letter.html
@@ -21,7 +21,7 @@
             I've also told you this before too; I've never cried from happiness before, but the only time that I've come even close is when I was thinking about you. 
             I was walking Lyra down the street while I was thinking about you; I thought about everything that you've done for me, how much you've improved my life, 
             how much you've protected me, and it was all too much. You made me so happy at that moment, and you weren't even there. You're caring and you're loving, 
-            you're sweet and you're funny, you're cool and you're and you're smart, and not to mention that you're beautiful and you're cute and you're hot and you're so, so sexy. 
+            you're sweet and you're funny, you're cool and you're smart, and not to mention that you're beautiful and you're cute and you're hot and you're so, so sexy. 
             <a href = "reasons.html">You're without a doubt, the best.</a>
         </p>
         <p>
@@ -37,10 +37,11 @@
             You're the love of my life, and I only ever want you to be happy.
         </p>
         <p>
-            And after all of this time that we've been together, I want to thank you. For helping me, for making me happy, for loving me, and for <a href = "reasons.html">being the best</a> 
-            So honey, thank you. I don't know if I can ever thank you enough for what you've done for me. Or put into words how much I love you. I hope that you like my gifts. 
-            I'm sorry that my face looks really bad in the picture. If you ask me, you can see what it looked like before the face was put in (I think it looks better that way, 
-            you can just fill in the face with your imagination). I really hope that you like the website and that you'll visit it throughout the year (you might see some different things!). 
+            And after all of this time that we've been together, I want to thank you. For helping me, for making me happy, for loving me, and for <a href = "reasons.html">being the best</a>. 
+            So honey, thank you. I don't know if I can ever thank you enough for what you've done for me. Or put into words how much I love you. I hope that you like my gifts, 
+            and I hope that we'll be together to celebrate many more anniversaries. I'm sorry that my face looks really bad in the picture. If you ask me, you can see 
+            <a href = "pictures/drawing.jpg">what it looked like before the face was put in</a> (I think it looks better that way, you can just fill in the face with your imagination). 
+            I really hope that you like <a href = "index.html">the website</a> and that you'll visit it throughout the year (you might see some different things!). 
             Sometimes, I look at myself, and then I look at you and I wonder how someone like me could ever be chosen, let alone deserve someone so wonderful and amazing and godlike as you. 
             So thank you, and, you're the best you're the bestyou'rethebest you'rethebestyou'rethebestyou'rethebest
         </p>
